compatible with frontend of Visual Composer

--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -46,6 +46,9 @@
     border-radius: 3px;
     overflow: hidden;
 }
+.vc_add-element-container .icon-visual-portfolio {
+    position: absolute;
+}
 
 .vc_control-visual-portfolio {
     display: inline-block;
