gutenberg block styles moved from js to css folder

--- a/src/assets/admin/css/gutenberg-block.scss
+++ b/src/assets/admin/css/gutenberg-block.scss
@@ -6,6 +6,7 @@
     justify-content: flex-start;
     min-height: 0;
     padding: 14px;
+    background-color: #f8f9f9;
 
     .components-placeholder__label {
         flex: 1;
